Fix some security tests after 266167@main https://bugs.webkit.org/show_bug.cgi?id=259417

Unreviewed.

266167@main changed Cocoa's WebKitTestRunner's preferences management
from copying from the newly allocated WKWebViewConfiguration to copying
from the long-living WKPreferencesRef to the newly allocated WKWebViewConfiguration.
This made it so that state set in previous test runs was being carried forward
to future test runs done with the same WebKitTestRunner instance.
This just reverses the copying back to how it was before 266167@main.
I verified this fixes the tests Fujii noticed in https://bugs.webkit.org/show_bug.cgi?id=259324

* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::initializeWebViewConfiguration):
(WTR::TestController::platformAdjustContext):

Canonical link: https://commits.webkit.org/266231@main